# quick-tile-view

./: CMakeLists.txt  main.cpp  qml.qrc
examples/tiling/: CMakeLists.txt  HorizontalHandle.qml  VerticalHandle.qml  main.cpp
qml/: HorizontalHandle.qml  Tile.qml  TileView.qml  VerticalHandle.qml  main.qml
src/: CMakeLists.txt  flextilelayouter.cpp  flextilelayouter.h  flextiler.cpp  flextiler.h  main.cpp  tilegenerator.cpp  tilegenerator.h  tiler.cpp  tiler.h
tests/: CMakeLists.txt  flextilelayouter_test.cpp  main.cpp
